# VyapaarSetu

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml  seed.py
backend/config/: .secrets.toml.example  settings.toml
backend/migrations/: env.py
backend/src/: main.py
backend/src/agent/: engine.py  react_agent.py  voice_agent.py
backend/src/agent/prompts/: base.py  voice.py  whatsapp_catalogue.py
backend/src/api/: dependencies.py
backend/src/api/routes/: admin.py  auth.py  catalogue.py  chat.py  match.py  mse.py  products.py  snp.py  voice.py
backend/src/api/routes/channel/: whatsapp.py
backend/src/chat/: service.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: exceptions.py  logging.py  security.py
backend/src/data/: ondc_taxonomy.json  snp_seed.json
backend/src/db/: base.py  session.py
backend/src/db/models/: __init__.py  message.py  mse.py  mse_match.py  ondc_category.py  product.py  session.py  snp.py  user.py  whatsapp_auth.py
backend/src/llm/: __init__.py  client.py  types.py
backend/src/rag/: __init__.py  qdrant_search.py
backend/src/skills/: loader.py
backend/src/skills/builtin/cataloguing/: SKILL.md
backend/src/skills/builtin/matching/: SKILL.md
backend/src/skills/builtin/onboarding/: SKILL.md
backend/src/tools/: base.py  registry.py
backend/src/tools/core/: classify_product.py  extract_attributes.py  fetch_udyam_data.py  get_category_info.py  match_snp.py  search_knowledge.py  send_notification.py  validate_catalogue.py
frontend/: next.config.ts  (+4 more)
(+32 files in other folders)
