[project]
name = "vyapaarsetu"
version = "0.1.0"
description = "AI-powered MSE Agent Mapping Tool for ONDC TEAM Initiative"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.0.0",
    # Configuration
    "dynaconf>=3.2.0",
    # Logging
    "loguru>=0.7.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LLM - LangChain
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # RAG - Qdrant + sentence-transformers
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.2.0",
    # HTTP Client
    "httpx>=0.26.0",
    # Utils
    "pytz>=2024.1",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
